--- a/frontend/src/theme.less
+++ b/frontend/src/theme.less
@@ -1,2 +1,3 @@
 @global-link-color: #4091D2;
+@global-secondary-background: #000000;
 @global-font-family: Raleway, Helvetica, Arial, sans-serif, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
