remove image borders, add left/right margin on grid, add overlay on tile

--- a/frontend/src/theme.less
+++ b/frontend/src/theme.less
@@ -1,5 +1,5 @@
 @global-link-color: #4091d2;
 @global-secondary-background: #000000;
-@global-font-family: "Gideon Roman", Raleway, Helvetica, Arial, sans-serif, Roboto,
-  "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+@global-font-family: "Gideon Roman", Raleway, Helvetica, Arial, sans-serif,
+  Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
   "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
